# rust-experiments

./: README.md
test-polars/: Cargo.toml  test.parquet
test-polars/src/: main.rs
