[package]
name = "test-polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#polars = { git = "https://github.com/pola-rs/polars", rev = "rust-polars-0.18.0" }
polars = "0.18.0"
#polars-core = "0.18.0"
#polars-lazy = "0.18.0"
#polars-io = "0.18.0"
#tokio = "1.14.0"